// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableHead renders the component as sticky 1`] = `
.emotion-1:last-child td {
  border-bottom: none;
}

.emotion-1:hover td {
  background-color: #f7f9fa;
}

.emotion-2 th {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 1;
}

.emotion-0 {
  background-color: #f7f9fa;
  border-bottom: 1px solid #e5ebed;
  color: #536171;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  padding: 0.75rem 1rem;
  text-align: left;
  vertical-align: top;
}

<thead
  class="emotion-2"
  data-test-id="cf-ui-table-head"
>
  <tr
    class="emotion-1"
    data-test-id="cf-ui-table-row"
  >
    <th
      class="emotion-0"
      data-test-id="cf-ui-table-cell"
    >
      test
    </th>
  </tr>
</thead>
`;

exports[`TableHead renders the component as sticky and with an offset Top 1`] = `
.emotion-1:last-child td {
  border-bottom: none;
}

.emotion-1:hover td {
  background-color: #f7f9fa;
}

.emotion-2 th {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 1;
}

.emotion-0 {
  background-color: #f7f9fa;
  border-bottom: 1px solid #e5ebed;
  color: #536171;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  padding: 0.75rem 1rem;
  text-align: left;
  vertical-align: top;
}

<thead
  class="emotion-2"
  data-test-id="cf-ui-table-head"
>
  <tr
    class="emotion-1"
    data-test-id="cf-ui-table-row"
  >
    <th
      class="emotion-0"
      data-test-id="cf-ui-table-cell"
      style="top: 20px;"
    >
      test
    </th>
  </tr>
</thead>
`;
